# icutil

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
icutil_frontend/src/: App.jsx
monitoring/grafana/: dashboard.json
src/auth_backend/: Cargo.toml  auth_backend.did  lib.rs
src/backup_backend/: Cargo.toml  backup_backend.did
src/backup_backend/src/: lib.rs
src/device_management_backend/: Cargo.toml  device_management_backend.did
src/device_management_backend/src/: lib.rs
src/electricity_backend/: Cargo.toml  electricity_backend.did  lib.rs
src/icutil_backend/: Cargo.toml  electricity.did  icutil_backend.did  water.did
src/icutil_backend/src/: auth.rs  error.rs  key_rotation.rs  lib.rs  sensor_io.rs  storage_manager.rs  storage_utils.rs
src/icutil_frontend/: package.json
src/icutil_frontend/src/: App.jsx  main.jsx
src/icutil_frontend/src/components/: Dashboard.jsx  Dashboard.scss  ErrorBoundary.jsx  FilterControls.jsx  FlowChart.jsx  LiveFeed.jsx
src/icutil_frontend/src/contexts/: AuthContext.jsx  LoadingContext.jsx
src/icutil_frontend/src/hooks/: useFlowData.js
src/load_tests/: benchmark.rs
src/water_backend/: Cargo.toml  lib.rs  water_backend.did
