[package]
name = "icutil_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.6"
candid_derive = "0.6.3"
ic-cdk = "0.11.6"
ic-cdk-macros = "0.11.6"
ic-cdk-timers = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
